[metadata]
name = clld
version = 11.2.4.dev0
license = Apache 2.0
license_files = LICENSE
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = Python library supporting the development of cross-linguistic databases
long_description = file: README.md
long_description_content_type = text/markdown
keywords = web pyramid LRL Linguistics
url = https://clld.org
project_urls =
    Source = https://github.com/clld/clld
    Bug Tracker = https://github.com/clld/clld/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    Babel
    clldutils>=3.18
    pyramid>=1.10
    pyramid_mako>=1.0
    pyramid_tm
    SQLAlchemy>=1.4, <2.0
    zope.sqlalchemy
    webassets>=0.12.1
    markupsafe
    rdflib>=4.1.1
    nameparser

include_package_data = True

[options.packages.find]
where = src

[options.package_data]
clld =
    locale/**
    project_template/**
    web/**

[options.extras_require]
bootstrap =
    cookiecutter
    pycldf
dev =
    cookiecutter
    pycldf
    cldfcatalog
    waitress
    pyramid_debugtoolbar
    tox
    flake8
    wheel
    twine
    build
test =
    cookiecutter
    pytest>=6
    pytest-clld>=1.0.3
    pytest-mock
    pytest-cov
    coverage>=4.2
    zope.component>=3.11.0
docs =
    Sphinx<7
    docutils
    repoze.sphinx.autointerface

[options.entry_points]
console_scripts =
    clld = clld.__main__:main

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude =
    .tox,
    {{cookiecutter.directory_name}}

[extract_messages]
keywords = translate
input_dirs = src/clld
output_file = src/clld/locale/clld.pot
mapping_file = mapping.cfg

[init_catalog]
domain = clld
input_file = src/clld/locale/clld.pot
output_dir = src/clld/locale

[update_catalog]
domain = clld
input_file = src/clld/locale/clld.pot
output_dir = src/clld/locale

[compile_catalog]
domain = clld
directory = src/clld/locale

[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.6
testpaths = tests
filterwarnings =
    ignore::sqlalchemy.exc.SAWarning
    ignore::sqlalchemy.exc.RemovedIn20Warning
addopts =
    --appini=tests/test.ini
    --cov

[coverage:run]
source =
    clld
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
setenv =
    SQLALCHEMY_SILENCE_UBER_WARNING=1
